Delete feature ok

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Article listings</h1>
+<h1>Article listing</h1>
 <table>
     <thead>
         <tr>
@@ -12,7 +12,8 @@
         <tr>
             <td><%= article.title %></td>
             <td><%= article.description %></td>
-            <td>Some actions</td>
+            <td><%= button_to 'Show', article_path(article)%></td>
+            <td><%= button_to 'Delete', article_path(article), method: :delete%></td>
         </tr>
         <% end %>
     </tbody>
