--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,16 +5,18 @@
             <th>Title</th>
             <th>Description</th>
             <th colspan=3 >Actions</th>
+            <th>Author</th>
         </tr>
     </thead>
     <tbody>
-        <% @articles.each do |article| %>
+        <% @articles.each do |article| %> 
         <tr>
             <td><%= article.title %></td>
             <td><%= article.description %></td>
             <td><%= link_to 'Show', article_path(article)%></td>
             <td><%= link_to 'Edit', edit_article_path(article)%></td>
             <td><%= link_to 'Delete',article_path(article), data: { turbo_method: :delete }, :onclick=>"return confirm('Are you sure you want to delete this ')"%></td>
+            <td><%= article.user.username if article.user%></td>
         </tr>
         <% end %>
     </tbody>
