--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 
 <p><strong>Title: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%= @article.description %></p>
+<p><strong>By: </strong><%= @article.user.username%></p>
 
 <td><%= link_to 'Edit', edit_article_path(@article)%></td> |
 <td><%= link_to 'Delete', article_path(@article), data: { turbo_method: :delete }, :onclick=>"return confirm('Are you sure you want to delete this ')"%></td> | 
