--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to the blog</h1>
 
-<td><%= link_to 'Articles listing', articles_path%></td>
+<p><%= link_to 'Articles listing', articles_path%></p>
+<p><%= link_to "Sign up!", signup_path %> </p>
